--- a/register.css
+++ b/register.css
@@ -36,6 +36,7 @@ h1{
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    margin-right: 20px;
 }
 
 .input-group .input-group{
